<resources>
    <string name="app_name">بركة</string>
    <string name="name_req">الاسم مطلوب</string>
    <string name="pass_req">كلمة المرور مطلوبة </string>
    <string name="email_req">البريد الإلكتروني مطلوب</string>
    <string name="address_req">العنوان مطلوب</string>
    <string name="mobile_req">رقم الجوال مطلوب </string>

    <string name="hello_blank_fragment"> مرحبا</string>
    <string name="success_login">مرحبا بك </string>
    <string name="reg_success"> تم التسجيل بنجاح</string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="cart">السلة</string>
    <string name="fav">المفضلة</string>
    <string name="orders">الطلبات </string>
    <string name="profile">الملف الشخصي</string>
    <string name="profile_update_success">تم تحديث الملف الشخصي بنجاح</string>
    <string name="search">بحث</string>
    <string name="benefit">"فوائدها "</string>
    <string name="site_effect">"استخدامها  "</string>
    <string name="conflict">التعارضات</string>
    <string name="herb_fav_success">تمت الاضافة الى المفضلة بنجاح </string>
    <string name="health_status_title">الحالة الصحية</string>
    <string name="herb_details">عن العشبة</string>
    <string name="current_orders">الطلبات الحالية</string>
    <string name="previous_orders">الطلبات السابقة</string>
    <string name="ok">اضافة الى السلة</string>
    <string name="capsule">كابسولات</string>
    <string name="raw">خام</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="dialog_message">Dialog Body</string>
    <string name="select_vendor">اختر المتجر</string>
    <string name="select_deilvery_method">اختر طريقة التوصيل</string>
    <string name="receive_from_home">استلام من المتجر</string>
    <string name="home_delivery">توصيل الى المنزل</string>
    <string name="quantity">الكمية</string>
    <string name="price">السعر</string>
    <string name="herb">اسم العشبة</string>
    <string name="select_herb_title">اختيار النوع</string>
    <string name="total_price">السعر الاجمالي: %s</string>
    <string name="add_to_cart_title">نموذج الموافقة</string>
    <string name="add_to_cart_message">اقر بأنني اطلعت على التعارضات الممكنه بين الاعشاب و الادوية الخاصة بي ، و بأنني المسؤول عن اي مضاعفات قد تحدث لي </string>
    <string name="no">غير موافق</string>
    <string name="yes"> موافق</string>
    <string name="conflict_msg">هذه العشبة تتعارض مع  %s</string>
    <string name="conflict_title">تنبيه !</string>
    <string name="order_placed_successfully">تم تاكيد الطلب بنجاح!</string>
    <string name="added_to_cart">تمت الاضافة الى السلة</string>
    <string name="cancel">الغاء</string>
    <string name="medecine_out_of_stock">  . إنتهت من المخزون</string>
    <string name="plz_select_vendor">يرجى تحديد المتجر</string>
    <string name="name_of_vendor">اسم المتجر</string>
    <string name="order_id">رقم الطلب :%s</string>
    <string name="empty_cart">عربة التسوق فارغة</string>
    <string name="no_fav_herb">المفضلة فارغة</string>
    <string name="delivery_method">طريقة التوصيل: %s</string>
    <string name="no_active_order">لايوجد لديك طلبات حالية</string>
    <string name="no_previous_order">لايوجد لديك طلبات سابقة</string>
    <string name="personal_profile">الملف الشخصي</string>
    <string name="favourites">المفضلة</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="reset_pass_email_sent">تم إرسال البريد الإلكتروني لإعادة تعيين كلمة المرور</string>
    <string name="forgot_pass">هل نسيت كلمة المرور؟</string>
    <string name="invalid_email">البريد الالكتروني غير صحيح</string>
    <string name="password">كلمة المرور الجديدة</string>
    <string name="confirm_password">تأكيد كلمة المرورالجديدة</string>
    <string name="confirm_pass_req">تأكيد كلمة المرور مطلوبة</string>
    <string name="confirm_pass_not_matched">كلمة المرور وتأكيد كلمة المرور غير متطابقتين</string>
    <string name="pass_change_success">تم تعيين كلمة المرور بنجاح</string>
    <string name="submit">اعادة تعيين</string>
    <string name="change_pass">تغيير كلمة المرور</string>
    <string name="reset_pass">اعادة تعيين كلمة المرور</string>
    <string name="old_pass">كلمةالمرور السابقة</string>
    <string name="new_pass">كلمة المرور الجديدة</string>
    <string name="plz_enter_new_pass">يرجى إدخال كلمة المرور الجديدة</string>
    <string name="plz_enter_old_pass">يرجى إدخال كلمة المرور السابقة</string>
    <string name="invalid_credentials">كلمة المرور السابقة غير صحيحة</string>
    <string name="pass_update_fail">يجب ان تكون كلمة المرور الجديدة 8 خانات فأكثر</string>
    <string name="no_herb_found">العشبة التي يتم البحث عنها غير متوفرة</string>
    <string name="plz_enter_valid_mob">الرجاء إدخال رقم الجوال بشكل صحيح</string>
    <string-array name="stepLabels">
        <item>تم التوصيل</item>
        <item>تحت االعمل</item>
        <item>تم تاكيد الطلب</item>
    </string-array>
</resources>
