<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:id="@+id/linear_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_plus"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                android:padding="@dimen/dp_ten">

                <TextView
                    android:id="@+id/tvHerbName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_horizontal"
                    android:text="The order"
                    android:textAlignment="center" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageIv"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/herb_pic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lightGray"
                        android:padding="@dimen/three"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/herb" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/price" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/quantity" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:background="@color/lightGray"
                        android:padding="@dimen/three"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/tvHerb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/tvQuantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />


                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_ten"
                android:layoutDirection="rtl">

                <RadioButton
                    android:id="@+id/receiveFromHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/receive_from_home" />

                <RadioButton
                    android:id="@+id/radioHomeDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/home_delivery" />

            </RadioGroup>
            <!--  <androidx.recyclerview.widget.RecyclerView
                  android:id="@+id/rcvVendors"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent" />-->
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>