<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/thirty_five"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="البريد الإلكتروني"
            tools:ignore="RtlCompat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_ten"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:maxLines="1"

                android:padding="@dimen/dp_ten"

                android:textAlignment="viewStart"
                tools:ignore="RtlCompat" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/old_pass"
            app:passwordToggleEnabled="true"
            tools:ignore="RtlCompat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="viewStart"
                tools:ignore="RtlCompat" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/new_pass"

            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="viewStart"
                tools:ignore="RtlCompat" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- <EditText
             android:id="@+id/etPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:textAlignment="viewStart"
             tools:ignore="RtlCompat" />

         <EditText
             android:id="@+id/etConfirmPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:ems="10"
             android:hint="@string/confirm_password"
             android:inputType="textPassword"
             android:textAlignment="viewStart"
             tools:ignore="RtlCompat" />-->

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="257dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#FF7BBD7F"
            android:text="@string/submit"
            android:textColor="@color/white"

            />
    </LinearLayout>
</layout>